bug-fix: preventing overflow on task item

--- a/src/components/TaskPanel/styles/TaskItem.module.css
+++ b/src/components/TaskPanel/styles/TaskItem.module.css
@@ -12,6 +12,7 @@
   max-height: 170px;
   touch-action: manipulation;
   margin: 0px 10px 10px 10px;
+  overflow: hidden;
 }
 
 [data-theme="high-contrast"] .taskItem {
@@ -38,6 +39,7 @@
   display: flex;
   align-items: center;
   width: 100%;
+  overflow: hidden;
 }
 
 .checkboxwrapper15 .cbx {
@@ -59,7 +61,7 @@
   border-radius: 50%;
   transform: scale(1);
   vertical-align: middle;
-  border: 1px solid var(--text-color);
+  border: 1px solid var(--panel-text);
   transition: all 0.2s ease;
 }
 
@@ -109,7 +111,7 @@
 }
 
 .checkboxwrapper15 .cbx:hover span:first-child {
-  border-color: var(--text-color);
+  border-color: var(--panel-text);
   background-color: var(--background-color);
 }
 
@@ -186,13 +188,19 @@
   height: 24px;
   width: 24px;
   cursor: grab;
-}
-
-.dragHandle {
-  cursor: grab;
   display: flex;
+  color: var(--panel-text)
 }
 
 .dragHandle:active {
   cursor: grabbing;
+  color: var(--panel-text)
+}
+
+.checkboxwrapper {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  width: 100%;
+  overflow: hidden;
 }
